<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardView_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/school_image"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/school_image"
                android:src="@drawable/ic_school_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/cardView_container"
                app:layout_constraintTop_toTopOf="@id/cardView_container" />

            <TextView
                android:id="@+id/school_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/school_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTotalStudents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_students"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="@id/cardView_container"
                app:layout_constraintEnd_toEndOf="@+id/school_name"
                app:layout_constraintStart_toEndOf="@+id/school_image"
                app:layout_constraintTop_toBottomOf="@+id/school_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>